bug 7840 - more clippage. r=mig
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@8578 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/bindings/browsertoolbar.css
+++ b/app/skin/bindings/browsertoolbar.css
@@ -305,15 +305,10 @@ GENERAL RULES
 
 /* hide the overflow here so that as the window shrinks below a certain size
    the scrollbars on the browser window don't disappear.
- */  
-#navigator-toolbox
-{
-  overflow: hidden;
-}
-
-/** browser toolbar **/
+ */
 #navigator-toolbox > toolbar
 {
+  overflow: hidden;
 }
 
 
